src/qir/snapshots/hugr_qir__qir__result_ext__test__emit@llvm14_tket2.result.result_int.snap
---
source: src/qir/result_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [8 x i8] c"foo_int\00", align 1

define void @_hl.main.1(i16 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = sext i16 %0 to i64
  call void @__quantum__rt__int_record_output(i64 %1, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @0, i32 0, i32 0))
  ret void
}

declare void @__quantum__rt__int_record_output(i64, i8*)
