src/qir/snapshots/hugr_qir__qir__result_ext__test__emit@pre-mem2reg@llvm14_tket2.result.result_uint.snap
---
source: src/qir/result_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [9 x i8] c"foo_uint\00", align 1

define void @_hl.main.1(i8 %0) {
alloca_block:
  %"2_0" = alloca i8, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8 %0, i8* %"2_0", align 1
  %"2_01" = load i8, i8* %"2_0", align 1
  call void @__quantum__rt__int_record_output(i8 %"2_01", i8* getelementptr inbounds ([9 x i8], [9 x i8]* @0, i32 0, i32 0))
  ret void
}

declare void @__quantum__rt__int_record_output(i64, i8*)
